style.css
body {
    margin: 0px;
    padding: 0;
    align-items: center;
    flex-direction: column;
   
}

main {
    padding: 140px;
    
}



div {
    display: block;
    margin: auto;
   
}




/* Nav Bar and Title */

nav {

    background-color: #FFB801;
    text-align: center;
}

nav > #select-tabs {
    background-color: #FFC634;
    line-height: 40px;
}

nav > #select-tabs > a {
    display: inline;
    margin: 40px;
    font-family: kalam;
    font-size: 20px;

    color: black;
    text-decoration: none;

}

nav > #select-tabs > a:hover {
    color: #288B6D;
    text-decoration: underline;
}

nav > #select-tabs > .selected-tab {
    color: #2B9575;
}

h1 {
    font-family: pacifico;
    font-size: 60px;
    margin: auto;
    line-height: 120px;
    color: white;
    font-weight: lighter;
}

.bee-gif {
    position: absolute;
    left: 20px;
    top: 30px;
    z-index: 10;
   

}

/* /Nav Bar and Title */


/* body */
h2 {
    font-family: sriracha;
    color: #2B9575;
    
}

h3 {
    font-family: "playwrite hr";
    color: #A37601;
    text-align: center;
    
}

p {
    font-family: kalam;
    align-items: center;
    max-width: 400px;
    margin-right: 25px;
}



.honey-content > img {
    height: 200px;
    max-width: 50%;
    margin-top: 20px;
    align-items: center;
    margin-right: 10px;

}



/* Image zoom in when hovered */
.honey-content > img:hover {
    transform: scale(1.1);

}  

/* Image zoom in when hovered */



.honey-content > p {
    align-items: center;
   
    margin-left: 0px;
    
}

.honey-content {
    align-items: center;
    display: flex;
    justify-content: center;
    margin: 30px;
    text-align: left;

    
   
}

.honey-image2 {
    flex-direction: row-reverse;
    align-items: center;
    display: flex;
    margin: 30px;
}


    

.text-list {
    max-width: 50%;
    margin-left: 20px;
    text-align: left;
}

.text-list > p {
    margin-bottom: 10px;
    padding-left: 20px;
}

.text-list > ul {
    margin: 0;

}

li {
    display: flex;
    align-items: center; 
    

    font-family: kalam;
}

li::before {
    content: url('images/honey-icon2.png');
    padding-right: 10px;

}



.honey-image {
    width: 230px;
    height: auto;
    margin-right: 25px;
    border: 20px solid #FFB801;
}
.honey-image2 {
    flex-direction: row-reverse;
    align-items: center;
    display: flex;
    margin: 0px 20px;
    height: auto;
    width: 250px;
    border: 20px solid #FFB801;
    
   
}







/* body */


/* footer */

.container {
    position: relative;
    flex-grow: 1;

}

footer {
    background-color: #BDD4CE;
    text-align: center;
    padding: 20px;
    position: relative;
    display: flex;
    height: 25px;
    
 
    
    
   
}

footer .content {
    max-width: 800px;
    margin: 0 auto 25px ;
    text-align: center;
    
  
}

footer h2 {
    margin-top: 0;
    font-size: 40px;
    color:#2B9575;
    font-family: sriracha;
}
footer p {
    margin: 0;
    font-family: kalam; 
    font-size: 25px;
    
}

a {
    color: #1c6650;
    text-decoration: underline;
}

a:hover {
    color: #2c8f71;
}

.footer-bottom {
    display: flex;
    justify-content: space-between; 
    width: 100%;     

    
   

}

/* /footer */

